packages/lustre-v6.6.103.3/test/should_fail/semantics/aux1.lus
node aux1(a,b:int) returns (c,d:int);
let
  (c,d) = if(a>0) then pre(a,b)
			else (pre(a)+1, pre(b)+1);
tel
